cycloid drive params calculate and visulization

--- a/基于角动量的高速机械臂设计.md
+++ b/基于角动量的高速机械臂设计.md
@@ -113,7 +113,7 @@
     <div style="text-align: center"><img src="https://cdn.jsdelivr.net/gh/Stylite-Y/MyTypora@master/img/md/VelAndMomt-2023-06-21-14-00-59.png .png" alt="VelAndMomt-2023-06-21-14-00-59.png " > </div>
     <div style="text-align: center"><img src="https://cdn.jsdelivr.net/gh/Stylite-Y/MyTypora@master/img/md/ForceComponents-2023-06-21-14-00-59.png .png" alt="ForceComponents-2023-06-21-14-00-59.png " > </div>
 
-- 含手部负载（1kg）的参数优化
+- **含手部负载（1kg）的参数优化**
     - 结果
     由于负载的增加，导致难以在0.1s内完成任务，因此将特征时间增加到0.15s
     ```python
@@ -238,7 +238,7 @@ PosTar += ((robot.q[-1][i] - P_tar[i])/q_m[k])**2 * 1.2
 #### 设计思路
 - <font color='red'>实验室现有的大疆电机</font>作为机械臂电机的主要型号。
 - <font color='red'>增加腕部的减速比</font>来提高机械臂负载能力空间。
-- 根据优化结果重新<font color='red'>选择一款小电机作为腕部</font>三个自由度电机。
+- 根据优化结果重新<font color='red'>选择一款小电机作为腕部</font>三个自由度电机, <font color='red'>T-motor的RI70或者RI80</font>。
 - 30左右的减速比有二级行星减速器和摆线减速器两种方法，但摆线减速器体积小质量小，因此暂时考虑<font color='red'>用摆线减速器</font>。
 - 肘部结构采用金师兄连杆驱动的方法，三个电机均置于肩部
 - 腕部结构采用<font color='red'>Tesla的腕部结构</font>，希望将其丝杆换为<font color='red'>连杆驱动</font>，电机至于大臂，但其可行性待商榷。
